--- a/areas/areas/forvill/items.yml
+++ b/areas/areas/forvill/items.yml
@@ -11,7 +11,7 @@
     Вы видите перед собой простой деревенский колодец, обложенный изнутри деревянными брусьями. Похоже,
     этот колодец давно засох и им сейчас никто не пользуется. Странно, что ведро по-прежнему привязано к
     верхней перекладине колодца.
-  keywords: [ "колодец" ]
+  keywords: ["колодец"]
   metadata:
     noPickup: true
 - id: 70501
@@ -28,7 +28,7 @@
     Вы видите перед собой просто толстую изогнутую ветку какого-то дерева. На первый взгляд клюка не
     представляет из себя ничего особенного, такие часто используют старые и немощные люди, но стоит только
     прикоснутся к ней, как начинаешь сразу ощущать непонятную вибрацию внутри клюки.
-  keywords: [ "клюка" ]
+  keywords: ["клюка"]
   type: WEAPON
   metadata:
     level: 10
@@ -46,7 +46,7 @@
       currency: золото
     requirements:
       intellect: 20
-      skills: [ 'staves' ]
+      skills: ['staves']
 - id: 70502
   name: "монокль"
   rname: "монокля"
@@ -57,7 +57,7 @@
   gender: "male"
   type: ARMOR
   roomDesc: "Блестящий кусочек стекла валяется тут."
-  keywords: [ "монокль", "блестящий", "кусочек" ]
+  keywords: ["монокль", "блестящий", "кусочек"]
   description: >-
     С помощью этого небольшого округлого стеклышка можно значительно увеличить остроту зрения, так что
     начинаешь замечать самые незначительные изменения. К сожалению, более крупные объекты становятся при
@@ -86,7 +86,7 @@
     По всей видимости какой-то негодяй отобрал эту игрушку у какого-то ребенка, который, несомненно, сейчас
     из-за этого сильно переживает. Эта скалка годится только на то, чтобы взять ее и отхлестать наглеца
     издевающегося над детьми.
-  keywords: [ "скакалка" ]
+  keywords: ["скакалка"]
   type: WEAPON
   metadata:
     level: 8
@@ -115,7 +115,7 @@
     Дубинки - наиболее распространенное оружие хранителей правопорядка в сельских
     областях. Дракона ей конечно не убьешь, но вот подвыпившего хулигана можно
     заставить успокоиться.
-  keywords: [ "дубинка" ]
+  keywords: ["дубинка"]
   type: WEAPON
   metadata:
     level: 10
@@ -132,7 +132,7 @@
       currency: золото
     requirements:
       strength: 20
-      skills: [ 'maces' ]
+      skills: ['maces']
 - id: 70505
   name: "лук кожевенника"
   rname: "лука кожевенника"
@@ -146,7 +146,7 @@
   description: >-
     Этот лук годится только для охоты на каких-нибудь небольших животных, и
     будет самоубийством пытаться использовать его для чего-то другого.
-  keywords: [ "лук" ]
+  keywords: ["лук"]
   type: WEAPON
   metadata:
     level: 10
@@ -163,7 +163,7 @@
       currency: золото
     requirements:
       agility: 20
-      skills: [ 'bows' ]
+      skills: ['bows']
 - id: 70506
   name: "оберег из пучка перьев"
   rname: "оберега из пучка перьев"
@@ -174,7 +174,7 @@
   gender: "male"
   type: ARMOR
   roomDesc: "Пучок перьев лежит тут."
-  keywords: [ "оберег", "пучок" ]
+  keywords: ["оберег", "пучок"]
   description: >-
     Кто-то аккуратно собрал несколько разноцветных голубиных перьев, связал их вместе и подвесил на тонкой
     веревочке. Тот, кто изготовил этот оберег, наверно полагался на его магическую силу, но, видимо, оберег ему
@@ -200,7 +200,7 @@
   gender: "female"
   type: ARMOR
   roomDesc: "Куртка из грубой кожи лежит тут."
-  keywords: [ "куртка" ]
+  keywords: ["куртка"]
   description: >-
     Такие обычно носят охотники.
   metadata:
@@ -216,7 +216,7 @@
       currency: золото
     requirements:
       agility: 20
-      skills: [ 'medium_armor' ]
+      skills: ['medium_armor']
 - id: 70508
   name: "куртка из сырой кожи"
   rname: "куртки из сырой кожи"
@@ -227,7 +227,7 @@
   gender: "female"
   type: ARMOR
   roomDesc: "Куртка из сырой кожи лежит тут."
-  keywords: [ "куртка" ]
+  keywords: ["куртка"]
   description: >-
     Такие обычно носят охотники.
   metadata:
@@ -244,7 +244,7 @@
       currency: золото
     requirements:
       agility: 20
-      skills: [ 'medium_armor' ]
+      skills: ['medium_armor']
 - id: 70509
   name: "тупой нож"
   rname: "тупого ножа"
@@ -257,7 +257,7 @@
   damageVerb: "резанул"
   description: >-
     Его надо-бы подточить.
-  keywords: [ "нож", "тупой" ]
+  keywords: ["нож", "тупой"]
   type: WEAPON
   metadata:
     level: 8
@@ -284,7 +284,7 @@
   damageVerb: "рубанул"
   description: >-
     Его надо-бы подточить.
-  keywords: [ "меч", "тупой" ]
+  keywords: ["меч", "тупой"]
   type: WEAPON
   metadata:
     level: 8
@@ -301,7 +301,7 @@
       currency: золото
     requirements:
       strength: 20
-      skills: [ 'swords' ]
+      skills: ['swords']
 - id: 70511
   name: "приворотное зелье"
   rname: "приворотного зелья"
@@ -313,7 +313,7 @@
   roomDesc: "Бутылочка со странной жидкостью лежит тут."
   description: >-
     Наверное это какая-то гадость, сваренная из лягушек и летучих мышей.
-  keywords: [ "зелье", "приворотное" ]
+  keywords: ["зелье", "приворотное"]
   type: POTION
   metadata:
     level: 10
@@ -341,7 +341,7 @@
   roomDesc: "Бутылка самогона стоит тут."
   description: >-
     Мерзко воняющее пойло.
-  keywords: [ "бутылка", "самогон" ]
+  keywords: ["бутылка", "самогон"]
   type: POTION
   metadata:
     level: 10
@@ -365,11 +365,11 @@
   vname: "чесночный пирог"
   tname: "чесночным пирогом"
   pname: "чесночном пироге"
-  gender: "male"  
+  gender: "male"
   roomDesc: "Чесночный пирог лежит тут."
   description: >-
     Мерзко воняющее блюдо.
-  keywords: [ "чесночный", "пирог" ]
+  keywords: ["чесночный", "пирог"]
   type: POTION
   metadata:
     level: 10
@@ -396,7 +396,7 @@
   gender: "male"
   type: ARMOR
   roomDesc: "Старый сюртук лежит тут."
-  keywords: [ "сюртук", "старый" ]
+  keywords: ["сюртук", "старый"]
   description: >-
     Поношенный, но еще добротный.
   metadata:
@@ -413,7 +413,7 @@
       currency: золото
     requirements:
       stamina: 20
-      skills: [ 'light_armor' ]
+      skills: ['light_armor']
 - id: 70515
   name: "защитные перчатки"
   rname: "защитных перчаток"
@@ -424,7 +424,7 @@
   gender: "plural"
   type: ARMOR
   roomDesc: "Длинные перчатки из толстой кожи лежат тут."
-  keywords: [ "защитные", "перчатки" ]
+  keywords: ["защитные", "перчатки"]
   description: >-
     Будут полезны, если вы решите поработать с кислотой.
   metadata:
@@ -441,7 +441,7 @@
       currency: золото
     requirements:
       stamina: 20
-      skills: [ 'light_armor' ]
+      skills: ['light_armor']
 - id: 70516
   type: RESOURCE
   name: "философский камень"
@@ -452,7 +452,7 @@
   pname: "философском камне"
   gender: "male"
   roomDesc: "Сияющий фиолетовым светом камень лежит тут."
-  keywords: [ "философский", "камень" ]
+  keywords: ["философский", "камень"]
   description: >-
     Необходимый ингредиент для превращения свинца в золото.
   metadata:
@@ -469,7 +469,7 @@
   gender: "male"
   type: CONTAINER
   roomDesc: "Широкий пояс с отсеками лежит тут."
-  keywords: [ "широкий", "пояс" ]
+  keywords: ["широкий", "пояс"]
   description: >-
     Широкий пояс из прочной кожи, на которую наклепками прикреплены несколько отсеков.
   maxItems: 5
@@ -493,7 +493,7 @@
   gender: "female"
   type: ARMOR
   roomDesc: "Шапка лесоруба лежит тут."
-  keywords: [ "шапка" ]
+  keywords: ["шапка"]
   description: >-
     Вы видите грубую шапку из дубленной кожи. В бою она конечно шлема не
     заменит, но от удара свалившейся сверху ветки защитит превосходно.
@@ -518,7 +518,7 @@
   gender: "male"
   type: ARMOR
   roomDesc: "Бронзовый колокольчик на веревочке лежит тут."
-  keywords: [ "бронзовый", "колокольчик" ]
+  keywords: ["бронзовый", "колокольчик"]
   description: >-
     Вы видите ничем не примечательный бронзовый колокольчик, такой что
     обычно привязывают к домашним животным.
@@ -543,7 +543,7 @@
   gender: "neuter"
   type: ARMOR
   roomDesc: "Маленькое зеленоватое кольцо лежит тут."
-  keywords: [ "кольцо", "змейка" ]
+  keywords: ["кольцо", "змейка"]
   description: >-
     Вы видите маленькое зеленоватое колечко, в виде кусающей за свой
     хвост змеи. Кольцо кажется всегда теплым на ощупь, так что вполне
@@ -569,7 +569,7 @@
   gender: "male"
   type: ARMOR
   roomDesc: "Значок бригадира лежит тут."
-  keywords: [ "значок" ]
+  keywords: ["значок"]
   description: >-
     Вы видите небольшой бронзовый жетон, который принадлежал когда-то
     бригадиру лесорубов. По периметру значка нанесены странные символы.
@@ -594,7 +594,7 @@
   pname: "комке тины"
   gender: "male"
   roomDesc: "Скользкий комок тины лежит тут."
-  keywords: [ "комок", "тина" ]
+  keywords: ["комок", "тина"]
   description: >-
     Склизкая противная тина. Впрочем, какому-нибудь орку или троллю -
     наверное даже понравится ее держать в руке.
@@ -615,7 +615,7 @@
   description: >-
     Под поилку приспособлено обычное корыто, вкопанное в землю. Сюда хозяева дома
     наливают воду, чтобы животные могли попить.
-  keywords: [ "поилка" ]
+  keywords: ["поилка"]
   metadata:
     noPickup: true
 - id: 70524
@@ -628,7 +628,7 @@
   pname: "пузырьке с ядом"
   gender: "male"  
   roomDesc: "Странный пузырек лежит тут."
-  keywords: [ "пузырек", "яд", "пузырёк" ]
+  keywords: ["пузырек", "яд", "пузырёк"]
   description: >-
     Пузырек маленький, удобный, и имеет узкое короткое горлышко. Он словно
     специально сделан, чтобы можно было быстро достать его, и, капнув в чью-нибудь
@@ -652,7 +652,7 @@
     человеческих ростов в диаметре! Его могут вращать и люди, но сейчас
     на рычагах закреплены упряжные ремни, очевидно сюда запрягают мулов
     или лошадей.
-  keywords: [ "колесо", "большое" ]
+  keywords: ["колесо", "большое"]
   metadata:
     noPickup: true
 - id: 70526
@@ -666,7 +666,7 @@
   roomDesc: "Колючий куст растет тут у забора."
   description: >-
     Обыкновенный куст, разлапистый, со здоровенными колючками.
-  keywords: [ "колючий", "куст" ]
+  keywords: ["колючий", "куст"]
   metadata:
     noPickup: true
 - id: 70527
@@ -681,7 +681,7 @@
   description: >-
     Ничем не примечательная конура, судя по всему - вполне обжитая. Неудивительно,
     если здесь живет сторожевой пес, принадлежащий хозяевам дома.
-  keywords: [ "собачья", "конура" ]
+  keywords: ["собачья", "конура"]
   metadata:
     noPickup: true
 - id: 70528
@@ -693,7 +693,7 @@
   pname: "древнем талисмане"
   gender: "male"  
   roomDesc: "Древний талисман лежит здесь."
-  keywords: [ "пузырек", "яд" ]
+  keywords: ["пузырек", "яд"]
   description: >-
     Древний каменный талисман. Впрочем, с виду - да и на ощупь, ничем не
     отличается от обычного камешка с каким-то непонятным изображением.
@@ -713,7 +713,7 @@
   roomDesc: "Странный пузырек лежит тут."
   description: >-
     Пузырек маленький, удобный, с крышкой, привязанной на веревочку.
-  keywords: [ "пузырек" ]
+  keywords: ["пузырек"]
   type: POTION
   metadata:
     level: 10
@@ -744,7 +744,7 @@
     чану приделан змеевик, ведущий к сосуду-приемнику. Металл перегонного аппарата
     не стоек ни к кислотам, ни к щелочам, так что непонятно, для чего он понадобился
     алхимику.
-  keywords: [ "перегонный", "аппарат" ]
+  keywords: ["перегонный", "аппарат"]
   metadata:
     noPickup: true
 - id: 70531
@@ -759,7 +759,7 @@
   roomDesc: "Потертый хлыст погонщика лежит тут."
   description: >-
     С помощью этого хлыста можно заставить слушаться даже самую упрямую скотину.
-  keywords: [ "хлыст" ]
+  keywords: ["хлыст"]
   type: WEAPON
   metadata:
     level: 10
@@ -776,7 +776,7 @@
       currency: золото
     requirements:
       stamina: 25
-      skills: [ 'various_weapons' ]
+      skills: ['various_weapons']
 - id: 70532
   name: "седые усы"
   rname: "седых усов"
@@ -787,7 +787,7 @@
   gender: "plural"
   type: ARMOR
   roomDesc: "Седые усы лежат тут."
-  keywords: [ "седые", "усы" ]
+  keywords: ["седые", "усы"]
   description: >-
     Это шикарные накладные усы, одев которые, вас даже мать родная не узнает.
   metadata:
@@ -810,7 +810,7 @@
   gender: "female"
   type: ARMOR
   roomDesc: "Связка отмычек лежит тут."
-  keywords: [ "связка", "отмычек" ]
+  keywords: ["связка", "отмычек"]
   description: >-
     На большое металлическое кольцо нанизано около дюжины разнообразных отмычек.
     Эта вещь, без сомнения, пригодится любому вору при взломе замков.
@@ -831,9 +831,9 @@
   vname: "заметки алхимика"
   tname: "заметками алхимика"
   pname: "заметках алхимика"
-  gender: "plural"  
+  gender: "plural"
   roomDesc: "Пергамент с заметками алхимика лежат тут."
-  keywords: [ "заметки" ]
+  keywords: ["заметки"]
   description: >-
     Вы рассматриваете пергамент с заметками о работах одного алхимика.
     В основном там описывается всякая научная чушь, но есть заметка и
@@ -857,8 +857,8 @@
   roomDesc: "Напротив вас стоит массивный дубовый буфет."
   description: >-
     Буфет сделан из толстых дубовых панелей, так что едва ли кому удастся взломать его силой.
-  keywords: [ "буфет" ]
-  items: [ "forvill:70536" ]
+  keywords: ["буфет"]
+  items: ["forvill:70536"]
   closed: true
   locked: true
   lockedBy: "forvill:70537"
@@ -874,7 +874,7 @@
   pname: "серебряном сервизе"
   gender: "male"  
   roomDesc: "Серебряный сервиз стоит тут."
-  keywords: [ "серебряный", "сервиз" ]
+  keywords: ["серебряный", "сервиз"]
   description: >-
     Продав этот сервиз какому-нибудь коллекционеру, можно заработать немало денег.
   metadata:
@@ -888,14 +888,15 @@
   vname: "маленький золотой ключ"
   tname: "маленьким золотым ключом"
   pname: "маленьком золотом ключе"
-  gender: "male"  
+  gender: "male"
   keywords: ["ключ", "маленький", "золотой"]
   roomDesc: "Маленький золотой ключ лежит тут."
   description: >-
     Маленький золотой ключик, по всему видно - работа настоящего мастера.
     Судя по замысловатости ключа, замок, им открываемый - едва ли кому-то
-    удастся взломать..."
+    удастся взломать...
   behaviors:
+    decay_on_drop: true
     decay_in_inventory:
       duration: 600
   metadata:
@@ -912,7 +913,7 @@
   description: >-
     Удобный, большой стол из красиво отделанного дерева. Пожалуй, такой
     могут себе позволить только очень состоятельные люди.
-  keywords: [ "широкий", "письменный", "стол" ]
+  keywords: ["широкий", "письменный", "стол"]
   metadata:
     noPickup: true
 - id: 70539
@@ -926,7 +927,7 @@
   roomDesc: "Странный пузырек лежит тут."
   description: >-
     Пузырек маленький, удобный, с крышкой, привязанной на веревочку.
-  keywords: [ "пузырек" ]
+  keywords: ["пузырек"]
   type: POTION
   metadata:
     level: 10
@@ -954,7 +955,7 @@
   roomDesc: "Странный пузырек лежит тут."
   description: >-
     Пузырек маленький, удобный, с крышкой, привязанной на веревочку.
-  keywords: [ "пузырек" ]
+  keywords: ["пузырек"]
   type: POTION
   metadata:
     level: 10
@@ -982,7 +983,7 @@
   roomDesc: "Подозрительный пузырек лежит тут."
   description: >-
     Маленький пузырек со светящимся красным зельем.
-  keywords: [ "зелье", "огня" ]
+  keywords: ["зелье", "огня"]
   type: POTION
   metadata:
     level: 10
@@ -1010,7 +1011,7 @@
   roomDesc: "Подозрительный пузырек лежит тут."
   description: >-
     Маленький пузырек со светящимся синим зельем.
-  keywords: [ "зелье", "холода" ]
+  keywords: ["зелье", "холода"]
   type: POTION
   metadata:
     level: 10
@@ -1038,7 +1039,7 @@
   roomDesc: "Подозрительный пузырек лежит тут."
   description: >-
     Маленький пузырек с искрящимся зельем.
-  keywords: [ "зелье", "молнии" ]
+  keywords: ["зелье", "молнии"]
   type: POTION
   metadata:
     level: 10
